Extract data, loop, and create DF

--- a/NUFORC_WebScrape_Oct22.ipynb
+++ b/NUFORC_WebScrape_Oct22.ipynb
@@ -3,11 +3,11 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "8affb09b",
+   "id": "db672afc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Imports\n",
+    "# Dependencies\n",
     "from splinter import Browser\n",
     "from bs4 import BeautifulSoup as soup\n",
     "from webdriver_manager.chrome import ChromeDriverManager\n",
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "6d323dd5",
+   "id": "ef1f0ff0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "e49f20cc",
+   "id": "c2014705",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "c5bc0547",
+   "id": "b860808a",
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "ab451416",
+   "id": "5569eda4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "a7e51cc7",
+   "id": "857a8285",
    "metadata": {},
    "outputs": [
     {
@@ -14536,13 +14536,14 @@
     }
    ],
    "source": [
+    "#View Results\n",
     "print(b_soup.prettify())"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "56be8649",
+   "id": "6c214b2b",
    "metadata": {},
    "outputs": [
     {
@@ -15036,6 +15037,88 @@
     "# Extract all the text elements\n",
     "text = b_soup.text\n",
     "print(text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "da86b198",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Extract all data\n",
+    "table = b_soup.find('font', style_='FONT-SIZE:11pt')\n",
+    "records = b_soup.find_all('tr', valign='TOP')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "ceada400",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Date': '10/1/22 03:05',\n",
+       " 'City': 'Columbus',\n",
+       " 'State': 'MS',\n",
+       " 'Country': 'USA',\n",
+       " 'Shape': 'Light',\n",
+       " 'Duration': '~15 seconds to a minute',\n",
+       " 'Summary': 'BRIGHT light panned like a spotlight in both windows in my bedroom - no sound - no cars - no people. 2nd time this has happened',\n",
+       " 'Posted': '10/8/22',\n",
+       " 'Images': ''}"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# New empty list\n",
+    "oct_nuforc_df= []\n",
+    "# Loop through data, create a list of rows\n",
+    "for record in records:  \n",
+    "    record_info = {}\n",
+    "    date = record.find_all('td')[0].text\n",
+    "    city = record.find_all('td')[1].text\n",
+    "    state = record.find_all('td')[2].text\n",
+    "    country = record.find_all('td')[3].text\n",
+    "    shape = record.find_all('td')[4].text\n",
+    "    duration = record.find_all('td')[5].text\n",
+    "    summary = record.find_all('td')[6].text\n",
+    "    posted = record.find_all('td')[7].text\n",
+    "    images = record.find_all('td')[8].text\n",
+    "#     print fields\n",
+    "    \n",
+    "    record_info = {\n",
+    "    \"Date\": date, \n",
+    "    \"City\" : city,\n",
+    "    \"State\" : state,\n",
+    "    \"Country\": country,\n",
+    "    \"Shape\": shape,\n",
+    "    \"Duration\" : duration,\n",
+    "    \"Summary\" : summary,\n",
+    "    \"Posted\" : posted,\n",
+    "    \"Images\" : images\n",
+    "    }\n",
+    "\n",
+    "    oct_nuforc_df.append(record_info)\n",
+    "record_info"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ca890af4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create DataFrame\n",
+    "oct_data_df=pd.DataFrame(oct_nuforc_df)\n",
+    "oct_data_df"
    ]
   }
  ],
