run DF, save to csv and quit session

--- a/NUFORC_WebScrape_Oct22.ipynb
+++ b/NUFORC_WebScrape_Oct22.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "db672afc",
+   "id": "b71fbf95",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "ef1f0ff0",
+   "id": "13eab5ad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "c2014705",
+   "id": "d64087c2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "b860808a",
+   "id": "7ffa0185",
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "5569eda4",
+   "id": "0f1d315c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "857a8285",
+   "id": "61e36a94",
    "metadata": {},
    "outputs": [
     {
@@ -14543,7 +14543,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "6c214b2b",
+   "id": "edf412e7",
    "metadata": {},
    "outputs": [
     {
@@ -15042,7 +15042,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "da86b198",
+   "id": "7fc2c990",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15054,7 +15054,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "ceada400",
+   "id": "220fefa4",
    "metadata": {},
    "outputs": [
     {
@@ -15111,14 +15111,254 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ca890af4",
+   "execution_count": 10,
+   "id": "7c1a9a13",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>City</th>\n",
+       "      <th>State</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Shape</th>\n",
+       "      <th>Duration</th>\n",
+       "      <th>Summary</th>\n",
+       "      <th>Posted</th>\n",
+       "      <th>Images</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>10/31/22 23:30</td>\n",
+       "      <td>Rancho mission viejo</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>Unknown</td>\n",
+       "      <td>10-15 seconds</td>\n",
+       "      <td>It was more like a long light of orange as if ...</td>\n",
+       "      <td>12/22/22</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>10/31/22 22:45</td>\n",
+       "      <td>New Braunfels</td>\n",
+       "      <td>TX</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>Chevron</td>\n",
+       "      <td>7 seconds</td>\n",
+       "      <td>Dim gray object flew silently while spreading ...</td>\n",
+       "      <td>12/22/22</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>10/31/22 19:11</td>\n",
+       "      <td>Concord</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>Light</td>\n",
+       "      <td>So far it’s been 40mins</td>\n",
+       "      <td>A circle of light flying in a circle motion cr...</td>\n",
+       "      <td>12/22/22</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>10/31/22 15:32</td>\n",
+       "      <td>New Port Richey</td>\n",
+       "      <td>FL</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>Disk</td>\n",
+       "      <td>2 minutes</td>\n",
+       "      <td>Bright white Flashing lights on the craft</td>\n",
+       "      <td>12/22/22</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>10/31/22 06:30</td>\n",
+       "      <td>Granite lake</td>\n",
+       "      <td>SA</td>\n",
+       "      <td>Canada</td>\n",
+       "      <td>Disk</td>\n",
+       "      <td>2 hours</td>\n",
+       "      <td>One craft was seen in front of my friends cabi...</td>\n",
+       "      <td>12/22/22</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>472</th>\n",
+       "      <td>10/1/22 15:34</td>\n",
+       "      <td>Huntsville</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>Cigar</td>\n",
+       "      <td>2 - 3 minutes</td>\n",
+       "      <td>Cigar shaped with a bright circular light to t...</td>\n",
+       "      <td>10/8/22</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>473</th>\n",
+       "      <td>10/1/22 11:50</td>\n",
+       "      <td>Gulf breeze</td>\n",
+       "      <td>FL</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>Circle</td>\n",
+       "      <td>Seconds intermittent</td>\n",
+       "      <td>This was circular and was blur...I've never se...</td>\n",
+       "      <td>10/8/22</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>474</th>\n",
+       "      <td>10/1/22 09:52</td>\n",
+       "      <td>Redwood valley</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>Other</td>\n",
+       "      <td></td>\n",
+       "      <td>A very very large huge X flying in and out of ...</td>\n",
+       "      <td>10/8/22</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>475</th>\n",
+       "      <td>10/1/22 04:30</td>\n",
+       "      <td>Bountiful</td>\n",
+       "      <td>UT</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>Light</td>\n",
+       "      <td>45 seconds</td>\n",
+       "      <td>deep above maybe outer space</td>\n",
+       "      <td>10/8/22</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>476</th>\n",
+       "      <td>10/1/22 03:05</td>\n",
+       "      <td>Columbus</td>\n",
+       "      <td>MS</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>Light</td>\n",
+       "      <td>~15 seconds to a minute</td>\n",
+       "      <td>BRIGHT light panned like a spotlight in both w...</td>\n",
+       "      <td>10/8/22</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>477 rows × 9 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               Date                  City State Country    Shape  \\\n",
+       "0    10/31/22 23:30  Rancho mission viejo    CA     USA  Unknown   \n",
+       "1    10/31/22 22:45         New Braunfels    TX     USA  Chevron   \n",
+       "2    10/31/22 19:11               Concord    CA     USA    Light   \n",
+       "3    10/31/22 15:32       New Port Richey    FL     USA     Disk   \n",
+       "4    10/31/22 06:30          Granite lake    SA  Canada     Disk   \n",
+       "..              ...                   ...   ...     ...      ...   \n",
+       "472   10/1/22 15:34            Huntsville    AL     USA    Cigar   \n",
+       "473   10/1/22 11:50           Gulf breeze    FL     USA   Circle   \n",
+       "474   10/1/22 09:52        Redwood valley    CA     USA    Other   \n",
+       "475   10/1/22 04:30             Bountiful    UT     USA    Light   \n",
+       "476   10/1/22 03:05              Columbus    MS     USA    Light   \n",
+       "\n",
+       "                    Duration  \\\n",
+       "0              10-15 seconds   \n",
+       "1                  7 seconds   \n",
+       "2    So far it’s been 40mins   \n",
+       "3                  2 minutes   \n",
+       "4                    2 hours   \n",
+       "..                       ...   \n",
+       "472            2 - 3 minutes   \n",
+       "473     Seconds intermittent   \n",
+       "474                            \n",
+       "475               45 seconds   \n",
+       "476  ~15 seconds to a minute   \n",
+       "\n",
+       "                                               Summary    Posted Images  \n",
+       "0    It was more like a long light of orange as if ...  12/22/22         \n",
+       "1    Dim gray object flew silently while spreading ...  12/22/22         \n",
+       "2    A circle of light flying in a circle motion cr...  12/22/22         \n",
+       "3            Bright white Flashing lights on the craft  12/22/22         \n",
+       "4    One craft was seen in front of my friends cabi...  12/22/22         \n",
+       "..                                                 ...       ...    ...  \n",
+       "472  Cigar shaped with a bright circular light to t...   10/8/22    Yes  \n",
+       "473  This was circular and was blur...I've never se...   10/8/22         \n",
+       "474  A very very large huge X flying in and out of ...   10/8/22         \n",
+       "475                       deep above maybe outer space   10/8/22         \n",
+       "476  BRIGHT light panned like a spotlight in both w...   10/8/22         \n",
+       "\n",
+       "[477 rows x 9 columns]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Create DataFrame\n",
     "oct_data_df=pd.DataFrame(oct_nuforc_df)\n",
     "oct_data_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "f70bc4aa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Save to CSV\n",
+    "oct_data_df.to_csv('Oct22_Data.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "ab93cc89",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Quit Session\n",
+    "browser.quit()"
    ]
   }
  ],
