add file - all data q4

--- a/NUFORC_WebScrape_Dec22.ipynb
+++ b/NUFORC_WebScrape_Dec22.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "dcb8a024",
+   "id": "319cd376",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "14524b12",
+   "id": "f17388f2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "03d2aa21",
+   "id": "c39d8e06",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "57856d02",
+   "id": "017d96e5",
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "a8af471b",
+   "id": "ef1764a7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "0f496fe8",
+   "id": "cea32a53",
    "metadata": {},
    "outputs": [
     {
@@ -4923,7 +4923,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "91ef153d",
+   "id": "86425970",
    "metadata": {},
    "outputs": [
     {
@@ -5103,7 +5103,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "87536448",
+   "id": "e0fc13aa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5115,7 +5115,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "a61cd4f9",
+   "id": "65d28287",
    "metadata": {},
    "outputs": [
     {
@@ -5173,7 +5173,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "4b4db717",
+   "id": "1de3bc8a",
    "metadata": {},
    "outputs": [
     {
@@ -5402,19 +5402,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "9b1dd741",
+   "execution_count": 22,
+   "id": "89202f93",
    "metadata": {},
    "outputs": [],
    "source": [
     "#Save to CSV\n",
-    "nov_data_df.to_csv('Nov22_Data.csv')"
+    "dec_data_df.to_csv('Dec22_Data.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "332c7993",
+   "execution_count": 23,
+   "id": "ebc772db",
    "metadata": {},
    "outputs": [],
    "source": [
