cleaned df, adding cities list

--- a/Data/NUFROC_2022_AllData.ipynb
+++ b/Data/NUFROC_2022_AllData.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "8e12d94a",
+   "execution_count": 2,
+   "id": "2c31332a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,12 +12,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "2fdce426",
+   "execution_count": 4,
+   "id": "6935f4ea",
    "metadata": {},
    "outputs": [],
    "source": [
-    "Dec2022 = pd.read_csv('../Dec22_Data.csv')\n",
+    "Dec2022 = pd.read_csv('Dec22_Data.csv')\n",
     "Nov2022 = pd.read_csv('Nov22_Data.csv')\n",
     "Oct2022 = pd.read_csv('Oct22_Data.csv')\n",
     "Sep2022 = pd.read_csv('Sep22_Data.csv')\n",
@@ -34,8 +34,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "47fda0ae",
+   "execution_count": 5,
+   "id": "b450dbb2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,8 +45,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "0d84e834",
+   "execution_count": 6,
+   "id": "f04ac29c",
    "metadata": {},
    "outputs": [
     {
@@ -142,142 +142,347 @@
        "      <td>9/9/22</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>153</th>\n",
-       "      <td>12/1/22 18:00</td>\n",
-       "      <td>Snowflake</td>\n",
-       "      <td>AZ</td>\n",
-       "      <td>USA</td>\n",
-       "      <td>Triangle</td>\n",
-       "      <td>2 minutes</td>\n",
-       "      <td>I grew up on a 40 acre parcel of land with thr...</td>\n",
-       "      <td>12/22/22</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>154</th>\n",
-       "      <td>12/1/22 15:33</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>USA</td>\n",
-       "      <td>Cross</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>I observed some type of phenomenon that I was ...</td>\n",
-       "      <td>12/22/22</td>\n",
-       "      <td>Yes</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>155</th>\n",
-       "      <td>12/1/22 14:10</td>\n",
-       "      <td>El paso</td>\n",
-       "      <td>TX</td>\n",
-       "      <td>USA</td>\n",
-       "      <td>Oval</td>\n",
-       "      <td>Ten minutes</td>\n",
-       "      <td>It appeared out of nowhere &amp; slowly moved acro...</td>\n",
-       "      <td>12/22/22</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>156</th>\n",
-       "      <td>12/1/22 06:20</td>\n",
-       "      <td>CHARLESTOWN</td>\n",
-       "      <td>IN</td>\n",
-       "      <td>USA</td>\n",
-       "      <td>Light</td>\n",
-       "      <td>2 to 3 minutes</td>\n",
-       "      <td>Bright object was seen arriving and silently h...</td>\n",
-       "      <td>12/22/22</td>\n",
-       "      <td>Yes</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>157</th>\n",
-       "      <td>12/1/22 03:59</td>\n",
-       "      <td>Mansfield</td>\n",
-       "      <td>TX</td>\n",
-       "      <td>USA</td>\n",
-       "      <td>Changing</td>\n",
-       "      <td>60 seconds</td>\n",
-       "      <td>Looked like a drone but moved way too fast the...</td>\n",
-       "      <td>12/22/22</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>2467 rows × 9 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "              Date                        City State  Country     Shape  \\\n",
-       "0    7/31/22 22:52                      Cuenca   NaN  Ecuador     Light   \n",
-       "1    7/31/22 21:59              West Lafayette    OH      USA     Light   \n",
-       "2    7/31/22 21:45                  Burr Ridge    IL      USA     Other   \n",
-       "3    7/31/22 21:25  Lingan, Cape Breton Island    NS   Canada  Cylinder   \n",
-       "4    7/31/22 21:15                      Conway    SC      USA    Circle   \n",
-       "..             ...                         ...   ...      ...       ...   \n",
-       "153  12/1/22 18:00                   Snowflake    AZ      USA  Triangle   \n",
-       "154  12/1/22 15:33                         NaN   NaN      USA     Cross   \n",
-       "155  12/1/22 14:10                     El paso    TX      USA      Oval   \n",
-       "156  12/1/22 06:20                 CHARLESTOWN    IN      USA     Light   \n",
-       "157  12/1/22 03:59                   Mansfield    TX      USA  Changing   \n",
+       "            Date                        City State  Country     Shape  \\\n",
+       "0  7/31/22 22:52                      Cuenca   NaN  Ecuador     Light   \n",
+       "1  7/31/22 21:59              West Lafayette    OH      USA     Light   \n",
+       "2  7/31/22 21:45                  Burr Ridge    IL      USA     Other   \n",
+       "3  7/31/22 21:25  Lingan, Cape Breton Island    NS   Canada  Cylinder   \n",
+       "4  7/31/22 21:15                      Conway    SC      USA    Circle   \n",
        "\n",
-       "               Duration                                            Summary  \\\n",
-       "0             5 minutes                       Triangle shape moving lights   \n",
-       "1             4 minutes            Bright circle light moving through sky.   \n",
-       "2                   NaN  Strange red, blue and black craft in the sky a...   \n",
-       "3           1-2 minutes  We were waiting for fireworks to start across ...   \n",
-       "4    Less than a minute  Round bright white light go in a straight line...   \n",
-       "..                  ...                                                ...   \n",
-       "153           2 minutes  I grew up on a 40 acre parcel of land with thr...   \n",
-       "154                 NaN  I observed some type of phenomenon that I was ...   \n",
-       "155         Ten minutes  It appeared out of nowhere & slowly moved acro...   \n",
-       "156      2 to 3 minutes  Bright object was seen arriving and silently h...   \n",
-       "157          60 seconds  Looked like a drone but moved way too fast the...   \n",
+       "             Duration                                            Summary  \\\n",
+       "0           5 minutes                       Triangle shape moving lights   \n",
+       "1           4 minutes            Bright circle light moving through sky.   \n",
+       "2                 NaN  Strange red, blue and black craft in the sky a...   \n",
+       "3         1-2 minutes  We were waiting for fireworks to start across ...   \n",
+       "4  Less than a minute  Round bright white light go in a straight line...   \n",
        "\n",
-       "       Posted Images  \n",
-       "0     10/8/22    Yes  \n",
-       "1      9/9/22    Yes  \n",
-       "2      9/9/22    Yes  \n",
-       "3      9/9/22    NaN  \n",
-       "4      9/9/22    NaN  \n",
-       "..        ...    ...  \n",
-       "153  12/22/22    NaN  \n",
-       "154  12/22/22    Yes  \n",
-       "155  12/22/22    NaN  \n",
-       "156  12/22/22    Yes  \n",
-       "157  12/22/22    NaN  \n",
-       "\n",
-       "[2467 rows x 9 columns]"
+       "    Posted Images  \n",
+       "0  10/8/22    Yes  \n",
+       "1   9/9/22    Yes  \n",
+       "2   9/9/22    Yes  \n",
+       "3   9/9/22    NaN  \n",
+       "4   9/9/22    NaN  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "summary"
+    "summary.head(5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "7fea2a8c",
+   "execution_count": 10,
+   "id": "7740274b",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "USummary = summary.loc[summary['Country'] == 'USA']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "3280f49d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>City</th>\n",
+       "      <th>State</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Shape</th>\n",
+       "      <th>Duration</th>\n",
+       "      <th>Summary</th>\n",
+       "      <th>Posted</th>\n",
+       "      <th>Images</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>7/31/22 22:52</td>\n",
+       "      <td>Cuenca</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>Light</td>\n",
+       "      <td>5 minutes</td>\n",
+       "      <td>Triangle shape moving lights</td>\n",
+       "      <td>10/8/22</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>7/31/22 21:59</td>\n",
+       "      <td>West Lafayette</td>\n",
+       "      <td>OH</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>Light</td>\n",
+       "      <td>4 minutes</td>\n",
+       "      <td>Bright circle light moving through sky.</td>\n",
+       "      <td>9/9/22</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>7/31/22 21:45</td>\n",
+       "      <td>Burr Ridge</td>\n",
+       "      <td>IL</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Strange red, blue and black craft in the sky a...</td>\n",
+       "      <td>9/9/22</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>7/31/22 21:25</td>\n",
+       "      <td>Lingan, Cape Breton Island</td>\n",
+       "      <td>NS</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>Cylinder</td>\n",
+       "      <td>1-2 minutes</td>\n",
+       "      <td>We were waiting for fireworks to start across ...</td>\n",
+       "      <td>9/9/22</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>7/31/22 21:15</td>\n",
+       "      <td>Conway</td>\n",
+       "      <td>SC</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>Circle</td>\n",
+       "      <td>Less than a minute</td>\n",
+       "      <td>Round bright white light go in a straight line...</td>\n",
+       "      <td>9/9/22</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Date                        City State Country     Shape  \\\n",
+       "0  7/31/22 22:52                      Cuenca   NaN     USA     Light   \n",
+       "1  7/31/22 21:59              West Lafayette    OH     USA     Light   \n",
+       "2  7/31/22 21:45                  Burr Ridge    IL     USA     Other   \n",
+       "3  7/31/22 21:25  Lingan, Cape Breton Island    NS     USA  Cylinder   \n",
+       "4  7/31/22 21:15                      Conway    SC     USA    Circle   \n",
+       "\n",
+       "             Duration                                            Summary  \\\n",
+       "0           5 minutes                       Triangle shape moving lights   \n",
+       "1           4 minutes            Bright circle light moving through sky.   \n",
+       "2                 NaN  Strange red, blue and black craft in the sky a...   \n",
+       "3         1-2 minutes  We were waiting for fireworks to start across ...   \n",
+       "4  Less than a minute  Round bright white light go in a straight line...   \n",
+       "\n",
+       "    Posted Images  \n",
+       "0  10/8/22    Yes  \n",
+       "1   9/9/22    Yes  \n",
+       "2   9/9/22    Yes  \n",
+       "3   9/9/22    NaN  \n",
+       "4   9/9/22    NaN  "
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "USummary.head(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "e31a410b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "USummary['ReportNum'] = USummary.index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "7f32335c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>City</th>\n",
+       "      <th>State</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Shape</th>\n",
+       "      <th>Duration</th>\n",
+       "      <th>Summary</th>\n",
+       "      <th>Posted</th>\n",
+       "      <th>Images</th>\n",
+       "      <th>ReportNum</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>7/31/22 22:52</td>\n",
+       "      <td>Cuenca</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>Light</td>\n",
+       "      <td>5 minutes</td>\n",
+       "      <td>Triangle shape moving lights</td>\n",
+       "      <td>10/8/22</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>7/31/22 21:59</td>\n",
+       "      <td>West Lafayette</td>\n",
+       "      <td>OH</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>Light</td>\n",
+       "      <td>4 minutes</td>\n",
+       "      <td>Bright circle light moving through sky.</td>\n",
+       "      <td>9/9/22</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>7/31/22 21:45</td>\n",
+       "      <td>Burr Ridge</td>\n",
+       "      <td>IL</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Strange red, blue and black craft in the sky a...</td>\n",
+       "      <td>9/9/22</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>7/31/22 21:25</td>\n",
+       "      <td>Lingan, Cape Breton Island</td>\n",
+       "      <td>NS</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>Cylinder</td>\n",
+       "      <td>1-2 minutes</td>\n",
+       "      <td>We were waiting for fireworks to start across ...</td>\n",
+       "      <td>9/9/22</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>7/31/22 21:15</td>\n",
+       "      <td>Conway</td>\n",
+       "      <td>SC</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>Circle</td>\n",
+       "      <td>Less than a minute</td>\n",
+       "      <td>Round bright white light go in a straight line...</td>\n",
+       "      <td>9/9/22</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Date                        City State Country     Shape  \\\n",
+       "0  7/31/22 22:52                      Cuenca   NaN     USA     Light   \n",
+       "1  7/31/22 21:59              West Lafayette    OH     USA     Light   \n",
+       "2  7/31/22 21:45                  Burr Ridge    IL     USA     Other   \n",
+       "3  7/31/22 21:25  Lingan, Cape Breton Island    NS     USA  Cylinder   \n",
+       "4  7/31/22 21:15                      Conway    SC     USA    Circle   \n",
+       "\n",
+       "             Duration                                            Summary  \\\n",
+       "0           5 minutes                       Triangle shape moving lights   \n",
+       "1           4 minutes            Bright circle light moving through sky.   \n",
+       "2                 NaN  Strange red, blue and black craft in the sky a...   \n",
+       "3         1-2 minutes  We were waiting for fireworks to start across ...   \n",
+       "4  Less than a minute  Round bright white light go in a straight line...   \n",
+       "\n",
+       "    Posted Images  ReportNum  \n",
+       "0  10/8/22    Yes          0  \n",
+       "1   9/9/22    Yes          1  \n",
+       "2   9/9/22    Yes          2  \n",
+       "3   9/9/22    NaN          3  \n",
+       "4   9/9/22    NaN          4  "
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "USummary.head(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "07465744",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "USummary.to_csv('summary.csv')"
+   ]
   }
  ],
  "metadata": {
