--- a/Data/NUFROC_2022_AllData.ipynb
+++ b/Data/NUFROC_2022_AllData.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "2c31332a",
+   "execution_count": 1,
+   "id": "85793aa9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,8 +12,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "6935f4ea",
+   "execution_count": 2,
+   "id": "7e076d54",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,8 +34,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "b450dbb2",
+   "execution_count": 3,
+   "id": "20a54c46",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,8 +45,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "f04ac29c",
+   "execution_count": 4,
+   "id": "18344e9d",
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +169,7 @@
        "4   9/9/22    NaN  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,8 +180,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "7740274b",
+   "execution_count": 5,
+   "id": "3fffcb3b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,8 +190,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "3280f49d",
+   "execution_count": 7,
+   "id": "e2b10c0c",
    "metadata": {},
    "outputs": [
     {
@@ -228,18 +228,6 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>7/31/22 22:52</td>\n",
-       "      <td>Cuenca</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>USA</td>\n",
-       "      <td>Light</td>\n",
-       "      <td>5 minutes</td>\n",
-       "      <td>Triangle shape moving lights</td>\n",
-       "      <td>10/8/22</td>\n",
-       "      <td>Yes</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>7/31/22 21:59</td>\n",
        "      <td>West Lafayette</td>\n",
@@ -264,18 +252,6 @@
        "      <td>Yes</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>7/31/22 21:25</td>\n",
-       "      <td>Lingan, Cape Breton Island</td>\n",
-       "      <td>NS</td>\n",
-       "      <td>USA</td>\n",
-       "      <td>Cylinder</td>\n",
-       "      <td>1-2 minutes</td>\n",
-       "      <td>We were waiting for fireworks to start across ...</td>\n",
-       "      <td>9/9/22</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>7/31/22 21:15</td>\n",
        "      <td>Conway</td>\n",
@@ -287,34 +263,51 @@
        "      <td>9/9/22</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>7/31/22 21:11</td>\n",
+       "      <td>Keyser</td>\n",
+       "      <td>WV</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>Light</td>\n",
+       "      <td>2 minutes</td>\n",
+       "      <td>Saw an orb that interacted with me.</td>\n",
+       "      <td>9/9/22</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>7/31/22 20:43</td>\n",
+       "      <td>gressham</td>\n",
+       "      <td>OR</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>Unknown</td>\n",
+       "      <td>less than a minute</td>\n",
+       "      <td>A single soft red light that pulsed three time...</td>\n",
+       "      <td>9/9/22</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "            Date                        City State Country     Shape  \\\n",
-       "0  7/31/22 22:52                      Cuenca   NaN     USA     Light   \n",
-       "1  7/31/22 21:59              West Lafayette    OH     USA     Light   \n",
-       "2  7/31/22 21:45                  Burr Ridge    IL     USA     Other   \n",
-       "3  7/31/22 21:25  Lingan, Cape Breton Island    NS     USA  Cylinder   \n",
-       "4  7/31/22 21:15                      Conway    SC     USA    Circle   \n",
+       "            Date            City State Country    Shape            Duration  \\\n",
+       "1  7/31/22 21:59  West Lafayette    OH     USA    Light           4 minutes   \n",
+       "2  7/31/22 21:45      Burr Ridge    IL     USA    Other                 NaN   \n",
+       "4  7/31/22 21:15          Conway    SC     USA   Circle  Less than a minute   \n",
+       "5  7/31/22 21:11          Keyser    WV     USA    Light           2 minutes   \n",
+       "6  7/31/22 20:43        gressham    OR     USA  Unknown  less than a minute   \n",
        "\n",
-       "             Duration                                            Summary  \\\n",
-       "0           5 minutes                       Triangle shape moving lights   \n",
-       "1           4 minutes            Bright circle light moving through sky.   \n",
-       "2                 NaN  Strange red, blue and black craft in the sky a...   \n",
-       "3         1-2 minutes  We were waiting for fireworks to start across ...   \n",
-       "4  Less than a minute  Round bright white light go in a straight line...   \n",
-       "\n",
-       "    Posted Images  \n",
-       "0  10/8/22    Yes  \n",
-       "1   9/9/22    Yes  \n",
-       "2   9/9/22    Yes  \n",
-       "3   9/9/22    NaN  \n",
-       "4   9/9/22    NaN  "
+       "                                             Summary  Posted Images  \n",
+       "1            Bright circle light moving through sky.  9/9/22    Yes  \n",
+       "2  Strange red, blue and black craft in the sky a...  9/9/22    Yes  \n",
+       "4  Round bright white light go in a straight line...  9/9/22    NaN  \n",
+       "5                Saw an orb that interacted with me.  9/9/22    NaN  \n",
+       "6  A single soft red light that pulsed three time...  9/9/22    NaN  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -325,18 +318,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "e31a410b",
+   "execution_count": 8,
+   "id": "bebfc035",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/ajdomingo/opt/anaconda3/envs/pythondata/lib/python3.7/site-packages/ipykernel_launcher.py:1: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  \"\"\"Entry point for launching an IPython kernel.\n"
+     ]
+    }
+   ],
    "source": [
     "USummary['ReportNum'] = USummary.index"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "7f32335c",
+   "execution_count": 9,
+   "id": "462c2b8a",
    "metadata": {},
    "outputs": [
     {
@@ -374,19 +380,6 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>7/31/22 22:52</td>\n",
-       "      <td>Cuenca</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>USA</td>\n",
-       "      <td>Light</td>\n",
-       "      <td>5 minutes</td>\n",
-       "      <td>Triangle shape moving lights</td>\n",
-       "      <td>10/8/22</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>7/31/22 21:59</td>\n",
        "      <td>West Lafayette</td>\n",
@@ -413,19 +406,6 @@
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>7/31/22 21:25</td>\n",
-       "      <td>Lingan, Cape Breton Island</td>\n",
-       "      <td>NS</td>\n",
-       "      <td>USA</td>\n",
-       "      <td>Cylinder</td>\n",
-       "      <td>1-2 minutes</td>\n",
-       "      <td>We were waiting for fireworks to start across ...</td>\n",
-       "      <td>9/9/22</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>7/31/22 21:15</td>\n",
        "      <td>Conway</td>\n",
@@ -438,34 +418,53 @@
        "      <td>NaN</td>\n",
        "      <td>4</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>7/31/22 21:11</td>\n",
+       "      <td>Keyser</td>\n",
+       "      <td>WV</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>Light</td>\n",
+       "      <td>2 minutes</td>\n",
+       "      <td>Saw an orb that interacted with me.</td>\n",
+       "      <td>9/9/22</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>7/31/22 20:43</td>\n",
+       "      <td>gressham</td>\n",
+       "      <td>OR</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>Unknown</td>\n",
+       "      <td>less than a minute</td>\n",
+       "      <td>A single soft red light that pulsed three time...</td>\n",
+       "      <td>9/9/22</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "            Date                        City State Country     Shape  \\\n",
-       "0  7/31/22 22:52                      Cuenca   NaN     USA     Light   \n",
-       "1  7/31/22 21:59              West Lafayette    OH     USA     Light   \n",
-       "2  7/31/22 21:45                  Burr Ridge    IL     USA     Other   \n",
-       "3  7/31/22 21:25  Lingan, Cape Breton Island    NS     USA  Cylinder   \n",
-       "4  7/31/22 21:15                      Conway    SC     USA    Circle   \n",
+       "            Date            City State Country    Shape            Duration  \\\n",
+       "1  7/31/22 21:59  West Lafayette    OH     USA    Light           4 minutes   \n",
+       "2  7/31/22 21:45      Burr Ridge    IL     USA    Other                 NaN   \n",
+       "4  7/31/22 21:15          Conway    SC     USA   Circle  Less than a minute   \n",
+       "5  7/31/22 21:11          Keyser    WV     USA    Light           2 minutes   \n",
+       "6  7/31/22 20:43        gressham    OR     USA  Unknown  less than a minute   \n",
        "\n",
-       "             Duration                                            Summary  \\\n",
-       "0           5 minutes                       Triangle shape moving lights   \n",
-       "1           4 minutes            Bright circle light moving through sky.   \n",
-       "2                 NaN  Strange red, blue and black craft in the sky a...   \n",
-       "3         1-2 minutes  We were waiting for fireworks to start across ...   \n",
-       "4  Less than a minute  Round bright white light go in a straight line...   \n",
-       "\n",
-       "    Posted Images  ReportNum  \n",
-       "0  10/8/22    Yes          0  \n",
-       "1   9/9/22    Yes          1  \n",
-       "2   9/9/22    Yes          2  \n",
-       "3   9/9/22    NaN          3  \n",
-       "4   9/9/22    NaN          4  "
+       "                                             Summary  Posted Images  ReportNum  \n",
+       "1            Bright circle light moving through sky.  9/9/22    Yes          1  \n",
+       "2  Strange red, blue and black craft in the sky a...  9/9/22    Yes          2  \n",
+       "4  Round bright white light go in a straight line...  9/9/22    NaN          4  \n",
+       "5                Saw an orb that interacted with me.  9/9/22    NaN          5  \n",
+       "6  A single soft red light that pulsed three time...  9/9/22    NaN          6  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -476,13 +475,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "07465744",
+   "execution_count": 10,
+   "id": "e1e83ba7",
    "metadata": {},
    "outputs": [],
    "source": [
     "USummary.to_csv('summary.csv')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cc20227e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
